--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pappu.com.facealignmentdlib.MainActivity">
+    tools:context="pappu.com.facealignmentdlib.activity.MainActivity">
 
-    <TextView
+    <Button
+        android:layout_centerInParent="true"
+        android:id="@+id/camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Open Camera" />
 </RelativeLayout>
